--- a/Prog 4/Tp 1/style.css
+++ b/Prog 4/Tp 1/style.css
@@ -1,13 +1,37 @@
-body{
-  background-color: blue;
+body {
+  background-color: blue; 
+  margin: 0; 
+  background: image('FONDO.jpf');
 }
 
-h1{
- text-align: center;
+.container {
+  position: relative; 
+  width: 100%; 
+  height: 100vh; 
 }
 
-img{
- right: 0;
- left: 0;
- width: 50;
+.corner {
+  position: absolute;
+  width: 100px; 
+  height: 100px;
+}
+
+.top-left {
+  top: 0;
+  left: 0;
+}
+
+.top-right {
+  top: 0;
+  right: 0;
+}
+
+.bottom-left {
+  bottom: 0;
+  left: 0;
+}
+
+.bottom-right {
+  bottom: 0;
+  right: 0;
 }
