--- a/Prog 4/Tp 1/Punto 5/style tp1-5.css
+++ b/Prog 4/Tp 1/Punto 5/style tp1-5.css
@@ -25,6 +25,7 @@ h2{
 .Derecho{
  color: red;
  font-size: 25px;
+
 }
 
 .CienciasSociales{
@@ -48,7 +49,8 @@ a{
  background-color: red;
  padding: 20px;
  margin: 20px;
- border: 1px solid
+ border: 1px solid;
+ color: white;
 }
 
 .div2{
@@ -62,6 +64,7 @@ a{
  display: flex;
  justify-content: center;
  align-items: center;
+ color: white !important;
 }
 
 .div3{
@@ -170,3 +173,6 @@ a{
  border-radius: 5px solid;
 }
 
+ul{
+ list-style-type: none;
+}
