--- a/Prog 4/Tp 2/Home Page/style-home.css
+++ b/Prog 4/Tp 2/Home Page/style-home.css
@@ -20,3 +20,15 @@ h1{
  text-align: center;
 }
 
+h2{
+ text-align: center;
+}
+
+div{
+ position: absolute;
+ top: 55%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ background-color: white;
+
+}
