--- a/Prog 4/Tp 2/Home Page/style-home.css
+++ b/Prog 4/Tp 2/Home Page/style-home.css
@@ -1,15 +1,15 @@
 body {
  background-color: blue;
 }
-header {
- text-align: center;
- padding: 0px; /* Asegúrate de que el valor de padding esté en píxeles */
+header{
+ display: flex;
+ justify-content: center;
+ height: 70px;
+
 }
-a{
- display: inline-block;
- margin: 0 auto;
- width: 20px !important;
- height: 20px !important;
+.home-button {
+ display: flex;
+ height: auto;
 }
 .corner {
  position: absolute;
@@ -35,11 +35,26 @@ h2 {
  display: flex;
  flex-direction: column;
  align-items: center;
- background-color: white;
+ background-color: blue;
+ color: white;
 }
-section {
+.tabla{
  display: block;
  align-items: center;
  text-align: center;
- padding: 100px; /* Asegúrate de que el valor de padding esté en píxeles */
+ padding: 20px;
+ font-size: 15px;
+}
+h1{
+ color: white;
+}
+h2{
+ color: white;
+}
+
+.plan{
+ text-align: center;
+ font-size: 25px;
+ color: white;
+ text-decoration: none;
 }
